src/index.css
.container{
  display: flex;
  align-items: center;
  justify-content: center;
  height:10vh;
  max-height: 10vh;
  margin: 1vh;
}

.ticker{
  background-color: black;
  width: 80vw;
  border-Radius:25px;
}



.name{
  font-family:  'Faster One', sans-serif
}

.modelWrapper{

}

.myModal{
  margin-top: 10vh;
  margin-left: 32vw;
  text-align:center;
  width:500px;
  height:550px;
  background-color: white;
  box-shadow: inset -4px -4px  #bfb9b9;
  border-left: solid 1px black;
  border-top: solid 1px black;
  overflow: scroll;
  background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
}


.options-btn{
  height: 40px;
  width: 40px
}

.ticker-text{
  font-size: 2vh;
  color: orange;
}

